[gd_scene load_steps=4 format=3 uid="uid://h8r5ufti7kym"]

[ext_resource type="Script" path="res://levels/mainmenu.gd" id="1_5g1f4"]
[ext_resource type="Texture2D" uid="uid://c4m2ni7a1av7w" path="res://assets/logo.png" id="1_xhjp4"]
[ext_resource type="Theme" uid="uid://cp6kq4e452w4s" path="res://assets/default_theme.tres" id="2_n1vvc"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5g1f4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 154.0
offset_right = -63.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainerMain" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainerMain"]
layout_mode = 2
texture = ExtResource("1_xhjp4")
expand_mode = 5
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainerMain"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainerMain/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Endless Mode")
theme = ExtResource("2_n1vvc")
action_mode = 0
text = "Start Game"

[node name="Endless Mode" type="Button" parent="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start Game")
focus_neighbor_bottom = NodePath("../How to Play")
theme = ExtResource("2_n1vvc")
action_mode = 0
text = "Endless Mode
"

[node name="How to Play" type="Button" parent="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions"]
layout_mode = 2
focus_neighbor_top = NodePath("../Endless Mode")
focus_neighbor_bottom = NodePath("../Options")
theme = ExtResource("2_n1vvc")
action_mode = 0
text = "How to Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions"]
layout_mode = 2
focus_neighbor_top = NodePath("../How to Play")
focus_neighbor_bottom = NodePath("../Exit")
theme = ExtResource("2_n1vvc")
action_mode = 0
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Start Game")
theme = ExtResource("2_n1vvc")
action_mode = 0
text = "Exit"

[node name="Contributors" type="Label" parent="MarginContainer/VBoxContainerMain/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n1vvc")
text = "Ashley, Cael, Luke, Sasha, and Tessa"

[node name="Version Number" type="Label" parent="MarginContainer/VBoxContainerMain/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n1vvc")
text = "v.0.0.1"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions/Start Game" to="." method="_on_start_game_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions/Endless Mode" to="." method="_on_endless_mode_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions/How to Play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainerMain/VBoxContainer/MenuOptions/Exit" to="." method="_on_exit_pressed"]
